--- a/app/styles/_nav.styl
+++ b/app/styles/_nav.styl
@@ -7,7 +7,7 @@
             font-size: 25px
 
         a
-            font-family: 'Modeno', 'helvetica'
+            font-family: 'Comfortaa', 'helvetica'
 
         li a
             font-size: 18px
